update after project end

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "JwtSecretKey": "supersecretkey123!supersecurekey456!",
+    "JwtIssuer": "https://localhost:8080",
+    "JwtAudience": "https://localhost:8080",
+    "JwtExpireMinutes": 1440, // 1 day
+    "JwtRefreshExpireDays": 15
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GradeMasterDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
